using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace KvalitetesLedelsesSystem.Models
{
    public class Colour
    {
        
        public string selectedColour;

        public Colour(string BaseColour)
        {
            selectedColour = BaseColour;
        }
    }
}
